# lex

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: docs.yml  lint.yml  test.yml
.tasks/: 00-ci.md  01-assist-mode.md  02-measurement.md  03-data-integrity.md  04-memoization.md  05-strategy.md  06-micro-opt.md  07-pipeline-sync.md  08-endgame.md  09-simd.md  10-multithreading.md  README.md
data/: words_with_frequencies.csv
gram/: Cargo.toml
gram/src/: main.rs
lex/: Cargo.toml
lex-cli/: CLAUDE.md  Cargo.toml  README.md
lex-cli/src/: assist.rs  cli.rs  error.rs  main.rs  simulate.rs
lex-core/: CLAUDE.md  Cargo.toml  README.md
lex-core/src/: game.rs  guesser.rs  lib.rs
lex-data/: CLAUDE.md  Cargo.toml  README.md
lex-data/src/: blocking.rs  cache.rs  data_dir.rs  error.rs  fetch.rs  language.rs  lib.rs  ngrams.rs  parse.rs  store.rs  wiktionary.rs  word.rs
lex-data/tests/: cache.rs  data_dir.rs
lex/src/: cli.rs  data.rs  error.rs  game.rs  lib.rs  main.rs  word.rs
lex/src/guesser/: correctness.rs  mod.rs
viz/: README.md  pyproject.toml  word_frequencies.ipynb
