cargo-features = ["profile-rustflags"]

[workspace]
resolver = "3"

members = ["lex-core", "lex-cli", "lex-data"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
log = "0.4"
proptest = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"

[profile.release]
lto = "fat"
opt-level = 3
rustflags = ["-C", "target-cpu=native"]

[profile.samply]
inherits = "release"
debug = true
lto = false
# opt-level = 0
rustflags = ["-C", "target-cpu=native", "-C", "force-frame-pointers=yes"]
