[package]
name = "lex-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lex"
path = "src/main.rs"

[dependencies]
lex-core = { path = "../lex-core" }
lex-data = { path = "../lex-data" }
anyhow = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
log = { workspace = true }
seq-macro = "0.3"
