[package]
name = "lex-data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
strum = { workspace = true }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
log = { workspace = true }
memmap2 = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
unicode-normalization = "0.1"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
