[package]
name = "lex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = "0.11"
lex-data = { path = "../lex-data" }
log = { workspace = true }
seq-macro = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "lex_core"

[[bin]]
name = "lex"
